fix code view messing up the data views when it Y overflows

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     margin: 0 10px;
     font-size: 16px;
     position: relative;
+    overflow: hidden;
 }
 .ScrollContainerData {
     overflow-y: scroll;
